Add selected navbar class in the CSS file

--- a/css/style.css
+++ b/css/style.css
@@ -66,4 +66,8 @@ a {
 .tools-rounded{
   border-radius: 9999px;
 }
+.tools-selected-item{
+  background-color: rgb(233 233 233);
+  padding: 3px;
+}
  
